webadmin: Cluster dialog overlapping checkboxes fixed
'Enable Virt Service' checkbox and 'Enable Gluster Service' checkbox
in New/Edit Cluster dialog  were overlapped in webkit based browsers
due to css browser specific media queries.

Bug-Url: https://bugzilla.redhat.com/1138556

--- a/packaging/branding/ovirt.brand/ovirt-patternfly-compat.css
+++ b/packaging/branding/ovirt.brand/ovirt-patternfly-compat.css
@@ -200,20 +200,6 @@ div.avw_contentWidget_pfly_fix {
     top: -3px;
     left: -8px;
 }
-.cpv_enableOvirtService_pfly_fix span.gwt-CheckBox {
-    position: relative;
-    top: -2px;
-}
-.cpv_enableGlusterService_pfly_fix span.gwt-CheckBox {
-    position: relative;
-    top: -2px;
-}
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-    .cpv_enableGlusterService_pfly_fix span.gwt-CheckBox {
-        position: relative;
-        top: -32px;
-    }
-}
 .cvp_consoleContent_pfly_fix, .cvp_clusterPolicyContent_pfly_fix, .cvp_fencingPolicyContent_pfly_fix {
     padding-top: 5px;
 }
